--- a/pomodoro-timer/package.json
+++ b/pomodoro-timer/package.json
@@ -21,5 +21,8 @@
     "react-dom": "18.2.0",
     "typescript": "4.9.5",
     "zustand": "^4.3.6"
+  },
+  "devDependencies": {
+    "sass": "^1.59.2"
   }
 }
