--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test": "jest --watch",
     "prepare": "husky install",
     "lint-staged": "lint-staged"
   },
@@ -33,6 +34,10 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "husky": "^8.0.0",
+    "jest": "^29.6.1",
+    "@types/jest": "^29.5.2",
+    "@types/testing-library__jest-dom": "5.14.6",
+    "jest-environment-jsdom": "^29.5.0",
     "lint-staged": "^13.2.3",
     "prettier": "^3.0.0"
   },
