--- a/.prettierrc
+++ b/.prettierrc
@@ -4,10 +4,10 @@
   "bracketSpacing": true,
   "endOfLine": "lf",
   "jsxSingleQuote": true,
-  "printWidth": 80,
+  "printWidth": 100,
   "quoteProps": "as-needed",
   "semi": true,
   "singleQuote": true,
   "tabWidth": 2,
-  "trailingComma": "es5"  
+  "trailingComma": "all"
 }
