--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "next lint --fix --dir src",
     "test": "jest --watch",
     "prepare": "husky install",
     "lint-staged": "lint-staged"
@@ -14,32 +14,34 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.0",
-    "@mui/material": "^5.14.0",
-    "@types/node": "20.4.2",
-    "@types/react": "18.2.15",
+    "@mui/icons-material": "^5.14.8",
+    "@mui/material": "^5.14.8",
+    "@types/node": "20.5.9",
+    "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
-    "eslint": "8.45.0",
-    "eslint-config-next": "13.4.10",
-    "next": "13.4.10",
+    "eslint": "8.48.0",
+    "eslint-config-next": "13.4.19",
+    "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.1.6",
-    "zustand": "^4.3.9"
+    "typescript": "5.2.2",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/jest-dom": "^6.1.2",
     "@testing-library/react": "^14.0.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-import": "^2.27.5",
+    "@typescript-eslint/eslint-plugin": "^6.6.0",
+    "@typescript-eslint/parser": "^6.6.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "husky": "^8.0.0",
-    "jest": "^29.6.1",
-    "@types/jest": "^29.5.2",
-    "@types/testing-library__jest-dom": "5.14.6",
-    "jest-environment-jsdom": "^29.5.0",
-    "lint-staged": "^13.2.3",
-    "prettier": "^3.0.0"
+    "husky": "^8.0.3",
+    "jest": "^29.6.4",
+    "@types/jest": "^29.5.4",
+    "@types/testing-library__jest-dom": "5.14.9",
+    "jest-environment-jsdom": "^29.6.4",
+    "lint-staged": "^14.0.1",
+    "prettier": "^3.0.3"
   },
   "lint-staged": {
     "*.{js, jsx,ts,tsx}": [
